Sqlite connection string | Logging level

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,5 +1,9 @@
 {
-  "Logging": {
+    "ConnectionStrings": {
+        "DefaultConnection" : "Data source=socialapp.db"
+    },
+
+    "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Information",
